Website and forms addition

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Event - Home</title>
+    <title>Inceptio</title>
   	<link rel="icon" href="img/favicon.png" type="image/png">
 
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -36,12 +36,12 @@
               <ul class="nav navbar-nav menu_nav justify-content-end">
                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="speaker.html">Speakers</a>
+                <li class="nav-item"><a class="nav-link" href="schedule.html">schedule</a>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
               </ul>
 
               <ul class="nav-right text-center text-lg-right py-4 py-lg-4">
-                <li><a href="#">Register Now</a></li>
+                <li><a href="/register.html">Register Now</a></li>
               </ul>
             </div>
           </div>
@@ -58,7 +58,7 @@
         <h1>INCEPTIO</h1>
         <p>Inceptio is the one-stop destination for those craving for breathtaking, mind boggling and diverse activities, competitions and inspirational seminars; that will not only challenge you, but also nurture you- all under one roof of NMIMS’ MPSTME.</p>
         <p style="margin: 1rem 0 2rem 0;"> Being one of its kind in the country, this unique innovation and entrepreneurship festival aims to foster innovation amongst students, empower them to give wings to their entrepreneurial ideas, and help them soar to great professional heights in the future!</p>
-        <a class="button button-header" href="#">Register Now</a>
+        <a class="button button-header" href="/register.html">Register Now</a>
       </div>
     </section>
     <!--================Hero Banner Area End =================-->
@@ -94,8 +94,8 @@
             </ul>
 
             <div class="clockdiv-content text-center">
-              <p class="h4 primary-text2 mb-2">August 20, 2019 in MPSTME CR-33</p>
-              <a class="button button-link" href="#">Register Now</a>
+              <p class="h4 primary-text2 mb-2">February 29, 2020 in MPSTME</p>
+              <a class="button button-link" href="/register.html">Register Now</a>
             </div>
           </div>
         </div>
@@ -104,7 +104,7 @@
     <!--================ Innovation section End =================-->
 
 
-    <!--================ Join section Start =================-->
+    <!-- ================ Join section Start =================-->
     <section class="section-margin">
       <div class="container">
         <div class="section-intro text-center pb-98px">
@@ -142,7 +142,7 @@
         </div>
       </div>
     </section>
-    <!--================ Join section End =================-->
+    <!--================ Join section End ================= -->
 
 
     <!--================ Speaker section Start =================-->
@@ -154,7 +154,7 @@
         </div>
 
         <div class="row" id="events-arena">
-        
+
         </div>
       </div>
     </section>
@@ -162,8 +162,8 @@
 
 
 
-        <!--================ Register section Start =================-->
-        <section class="section-margin text-center">
+        <!-- ================ Register section Start =================-->
+        <!-- <section class="section-margin text-center">
           <div class="container">
             <div class="section-intro text-center pb-98px">
               <p class="section-intro__title">Join the event</p>
@@ -194,11 +194,11 @@
             </form>
 
           </div>
-        </section>
-        <!--================ Register section End =================-->
+        </section> -->
+        <!--================ Register section End ================= -->
 
     <!--================ Gallery section Start =================-->
-    <section class="section-padding gallery-area gallery-bg">
+    <!-- <section class="section-padding gallery-area gallery-bg">
       <div class="container">
         <div class="section-intro section-intro-white text-center pb-98px">
           <p class="section-intro__title">Join the event</p>
@@ -293,89 +293,22 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!--================ Gallery section End =================-->
 
 
 
     <!-- ================ start footer Area ================= -->
     <footer class="footer-area">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3  col-md-6 col-sm-6">
-            <div class="single-footer-widget">
-              <h6>About Event</h6>
-              <p>
-                The world has become so fast paced that people don’t want to stand by reading a page of information to be  they would much rather look at a presentation and understand the message. It has come to a point where images and videos are used more to
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="single-footer-widget">
-              <h6>Navigation Links</h6>
-              <div class="row">
-                <div class="col">
-                  <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Feature</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                  </ul>
-                </div>
-                <div class="col">
-                  <ul>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3  col-md-6 col-sm-6">
-            <div class="single-footer-widget">
-              <h6>Newsletter</h6>
-              <p>
-                For business professionals caught between high OEM price and mediocre print and graphic output.
-              </p>
-              <div id="mc_embed_signup">
-                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
-                  <div class="input-group d-flex flex-row">
-                    <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-                    <button class="btn bb-btn"><span class="lnr lnr-location"></span></button>
-                  </div>
-                  <div class="mt-10 info"></div>
-                </form>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3  col-md-6 col-sm-6">
-            <div class="single-footer-widget mail-chimp">
-              <h6 class="mb-20">InstaFeed</h6>
-              <ul class="instafeed d-flex flex-wrap">
-                <li><img src="img/instagram/i1.jpg" alt=""></li>
-                <li><img src="img/instagram/i2.jpg" alt=""></li>
-                <li><img src="img/instagram/i3.jpg" alt=""></li>
-                <li><img src="img/instagram/i4.jpg" alt=""></li>
-                <li><img src="img/instagram/i5.jpg" alt=""></li>
-                <li><img src="img/instagram/i6.jpg" alt=""></li>
-                <li><img src="img/instagram/i7.jpg" alt=""></li>
-                <li><img src="img/instagram/i8.jpg" alt=""></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="footer-bottom">
         <div class="container">
           <div class="row align-items-center">
-            <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">Copyright 2019 |  All rights reserved</p>
+            <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">Copyright 2020 |  All rights reserved | Designed by Inceptio Team</p>
             <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-dribbble"></i></a>
-              <a href="#"><i class="fab fa-behance"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
         </div>
