--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
           <div class="clockdiv-content text-center">
             <p class="h4 primary-text2 mb-2">February 29, 2020 in MPSTME</p>
-            <a class="button button-link" href="/register.html">Register Now</a>
+            <a class="button button-link" href="register.html">Register Now</a>
           </div>
         </div>
       </div>
@@ -121,6 +121,16 @@
   </footer>
   <!-- ================ End footer Area ================= -->
 
+  <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
+  <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+  <script src="vendors/Magnific-Popup/jquery.magnific-popup.min.js"></script>
+  <script src="js/jquery.ajaxchimp.min.js"></script>
+  <script src="js/mail-script.js"></script>
+  <script src="js/countdown.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/eventsGenerator.js"></script>
 
 
 </body>
