--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </ul>
 
               <ul class="nav-right text-center text-lg-right py-4 py-lg-4">
-                <li><a href="/register.html">Register Now</a></li>
+                <li><a href="register.html">Register Now</a></li>
               </ul>
             </div>
           </div>
@@ -58,7 +58,7 @@
         <h1>INCEPTIO</h1>
         <p>Inceptio is the one-stop destination for those craving for breathtaking, mind boggling and diverse activities, competitions and inspirational seminars; that will not only challenge you, but also nurture you- all under one roof of NMIMS’ MPSTME.</p>
         <p style="margin: 1rem 0 2rem 0;"> Being one of its kind in the country, this unique innovation and entrepreneurship festival aims to foster innovation amongst students, empower them to give wings to their entrepreneurial ideas, and help them soar to great professional heights in the future!</p>
-        <a class="button button-header" href="/register.html">Register Now</a>
+        <a class="button button-header" href="register.html">Register Now</a>
       </div>
     </section>
     <!--================Hero Banner Area End =================-->
@@ -95,7 +95,7 @@
 
             <div class="clockdiv-content text-center">
               <p class="h4 primary-text2 mb-2">February 29, 2020 in MPSTME</p>
-              <a class="button button-link" href="/register.html">Register Now</a>
+              <a class="button button-link" href="register.html">Register Now</a>
             </div>
           </div>
         </div>
