form responsive for registration

--- a/registration.html
+++ b/registration.html
@@ -17,6 +17,11 @@
   <link rel="stylesheet" href="vendors/flat-icon/font/flaticon.css">
 
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    .frame-form{
+      margin: 0 auto;
+    }
+  </style>
 </head>
 
 
@@ -54,28 +59,20 @@
 
   <!--================start Form Area =================-->
 
-  <section class="section-margin">
+  <section>
     <div class="container">
-      <div class="section-intro text-center pb-98px">
+      <div class="section-intro text-center">
         <h2 class="primary-text">Register for Inceptio 3.0 !</h2>
         <img src="img/home/section-style.png" alt="">
-
-        <div class="section-intro text-center pb-98px">
+        <div class="section-intro text-center">
           <p class="section-intro__title">Date: 29 Feb, 2020</p>
-<p class="section-intro__title">Venue: MPSTME, NMIMS Mumbai</p>
-<p class="section-intro__title">Time: 2 pm onwards</p>
-
-        </div>
-
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZD3ROL-aWA8rMeMbMvV6cg_WwIc24x2YJlDISOZO9_9JfKg/viewform?embedded=true" width="640" height="1728" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-
-
+          <p class="section-intro__title">Venue: MPSTME, NMIMS Mumbai</p>
+          <p class="section-intro__title">Time: 2 pm onwards</p>
+        </div>       
       </div>
-
-
     </div>
-    </section>
+  </section>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZD3ROL-aWA8rMeMbMvV6cg_WwIc24x2YJlDISOZO9_9JfKg/viewform?embedded=true" style="width: 90vw; min-height: 2100px;" frameborder="0">Loading…</iframe>
   <!--================end Form Area =================-->
 
 
