--- a/lp.html
+++ b/lp.html
@@ -54,28 +54,22 @@
 
   <!--================start Form Area =================-->
 
-  <section class="section-margin">
+  <section>
     <div class="container">
-      <div class="section-intro text-center pb-98px">
+      <div class="section-intro text-center">
         <h2 class="primary-text">Register for Live Project Competition!</h2>
         <img src="img/home/section-style.png" alt="">
 
-        <div class="section-intro text-center pb-98px">
+        <div class="section-intro text-center">
           <p class="section-intro__title">Date: 29 Feb, 2020</p>
 <p class="section-intro__title">Venue: MPSTME, NMIMS Mumbai</p>
 <!-- <p class="section-intro__title">Time: 2 pm onwards</p> -->
-
         </div>
-
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaqvEAKHFEgJqalPz30Dg7X2vG3lQ9c2o18TDpUpyJ9r_anA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-
-
       </div>
-
-
     </div>
     </section>
+
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaqvEAKHFEgJqalPz30Dg7X2vG3lQ9c2o18TDpUpyJ9r_anA/viewform?embedded=true" style="width: 90vw; min-height: 700px; margin-left:5vw;" frameborder="0">Loading…</iframe>
   <!--================end Form Area =================-->
 
 
@@ -97,7 +91,16 @@
     </footer>
     <!-- ================ End footer Area ================= -->
 
-
+    <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
+    <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="vendors/Magnific-Popup/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/mail-script.js"></script>
+    <script src="js/countdown.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/eventsGenerator.js"></script>
 
   </body>
 
