--- a/registration.html
+++ b/registration.html
@@ -68,11 +68,11 @@
           <p class="section-intro__title">Date: 29 Feb, 2020</p>
           <p class="section-intro__title">Venue: MPSTME, NMIMS Mumbai</p>
           <p class="section-intro__title">Time: 2 pm onwards</p>
-        </div>       
+        </div>
       </div>
     </div>
   </section>
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZD3ROL-aWA8rMeMbMvV6cg_WwIc24x2YJlDISOZO9_9JfKg/viewform?embedded=true" style="width: 90vw; min-height: 2100px;" frameborder="0">Loading…</iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZD3ROL-aWA8rMeMbMvV6cg_WwIc24x2YJlDISOZO9_9JfKg/viewform?embedded=true" style="width: 90vw; min-height: 2100px; margin-left:5vw;" frameborder="0">Loading…</iframe>
   <!--================end Form Area =================-->
 
 
@@ -94,7 +94,16 @@
     </footer>
     <!-- ================ End footer Area ================= -->
 
-
+    <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
+    <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="vendors/Magnific-Popup/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/mail-script.js"></script>
+    <script src="js/countdown.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/eventsGenerator.js"></script>
 
   </body>
 
