--- a/vcf.html
+++ b/vcf.html
@@ -54,27 +54,22 @@
 
   <!--================start Form Area =================-->
 
-  <section class="section-margin">
+  <section>
     <div class="container">
-      <div class="section-intro text-center pb-98px">
+      <div class="section-intro text-center">
         <h2 class="primary-text">Register for Virtual Crowd Funding!</h2>
         <img src="img/home/section-style.png" alt="">
 
-        <div class="section-intro text-center pb-98px">
+        <div class="section-intro text-center">
           <p class="section-intro__title">Date: 29 Feb, 2020</p>
 <p class="section-intro__title">Venue: MPSTME, NMIMS Mumbai</p>
 <!-- <p class="section-intro__title">Time: 2 pm onwards</p> -->
-
         </div>
-
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScGf6i4YN1Vt_8u1FTcCZ9F2vPi2n8frWnEli78T9ojIPyupQ/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-
-
       </div>
       </div>
       </section>
 
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScGf6i4YN1Vt_8u1FTcCZ9F2vPi2n8frWnEli78T9ojIPyupQ/viewform?embedded=true" style="width: 90vw; min-height: 900px; margin-left:5vw;" frameborder="0">Loading…</iframe>
 
 
   <!--================end Form Area =================-->
@@ -105,7 +100,16 @@
     </footer>
     <!-- ================ End footer Area ================= -->
 
-
+    <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
+    <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="vendors/Magnific-Popup/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/mail-script.js"></script>
+    <script src="js/countdown.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/eventsGenerator.js"></script>
 
   </body>
 
