--- a/register.html
+++ b/register.html
@@ -69,7 +69,7 @@
           </div>
           <h3>Register to attend</h3>
           <p>Participate in the various seminars and workshops being held!</p><br>
-          <a class="button button-header" href="/registration.html">Register Now</a>
+          <a class="button button-header" href="registration.html">Register Now</a>
         </div>
 
         <div class="card-feature mb-5 mb-lg-0">
@@ -78,7 +78,7 @@
           </div>
           <h3>Crowd Funding</h3>
           <p>Pitch your startup idea to the audience and try to get as much investment as you can!</p><br>
-          <a class="button button-header" href="/vcf.html">Register Now</a>
+          <a class="button button-header" href="vcf.html">Register Now</a>
         </div>
 
         <div class="card-feature mb-5 mb-lg-0">
@@ -87,7 +87,7 @@
           </div>
           <h3>Live Projects</h3>
           <p>Live Projects Competition’ provides you the perfect platform to showcase your working models and win exciting prizes.!</p>
-          <a class="button button-header" href="/lp.html">Register Now</a>
+          <a class="button button-header" href="lp.html">Register Now</a>
         </div>
       </div>
       </div>
